[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "keras>=3.12.1",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "tensorflow==2.16.2",
    "torch==2.2.2",
]
